Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -13,7 +13,7 @@ custom_links_new_tab:
 client:
   name: Josh Painter
   title:
-  license_number:
+  license_number: 01734694
   about_markdown: |
     Josh Painter is founder of Temecula Impact Club, an organization that raised over $80,000 for local charities in 2017, and over $175,000 since inception.
 
