--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -29,7 +29,7 @@ client:
   phone_type:
   phone2:
   phone2_type:
-  email: jpainter78@gmail.com
+  email: josh@joshpaintersold.com
   url: http://ImpactCA.com
 
 CTAs:
