Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -68,10 +68,10 @@ lender:
 socials:
   review_sm_icons: false
   facebook_url: https://www.facebook.com/ImpactRE/
-  linkedin_url:
+  linkedin_url: https://www.linkedin.com/in/joshuascottpainter/
   youtube_url: https://www.youtube.com/channel/UCTNWQFb2v-1at2CmamDq32A
   twitter_url:
-  instagram_url:
+  instagram_url: https://www.instagram.com/joshpainter/?hl=en
   pinterest_url:
   zillow_url: https://www.zillow.com/profile/Josh-Painter/
   trulia_url:
